--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:client": "npm run build", // <-- Added this
+    "build:client": "npm run build",
     "preview": "vite preview",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
