--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,66 @@
-# Logs
-logs
-*.log
+# Environment variables
+.env
+.env.*
+!.env.example
+.buider/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+ENV/
+
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Build
+dist/
+dist-ssr/
+*.tsbuildinfo
+.next/
+out/
+
+# Local development
 *.local
+.DS_Store
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-.config/
-!.env
+# Docker
+.dockerignore
 
-*.env
+# Configs (except example)
+!.config/example/
+
+# Logs
+logs/
+*.log
