--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
     "@types/multer": "^2.0.0",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "multer": "^2.0.2",
