Changed embedding model

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,9 @@ langchain-google-genai
 
 # Google Gemini AI
 google-generativeai
-google-cloud-aiplatform
+
+# Cohere for embeddings
+cohere
 
 # PDF reading and text processing
 pypdf
@@ -25,9 +27,6 @@ python-jose
 bcrypt==4.1.2
 passlib==1.7.4
 
-<<<<<<< HEAD
 # Environment and utilities
 python-dotenv
-=======
 google
->>>>>>> 10d4cd2 (added gemini to it)
