--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     "routes": [
       { "src": "/(.*)", "dest": "/index.html" }
     ],
-    "outputDirectory": "client/dist/spa"
+    "outputDirectory": "client/dist"
   }
   
