Fixed Vite and vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-    "builds": [
-      { "src": "client/package.json", "use": "@vercel/static-build" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ],
-    "outputDirectory": "client/dist"
-  }
-  
+  "builds": [
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "client/dist" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/client/index.html" }
+  ]
+}
